--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles.css"/>
+    <title>Code Quiz</title>
 </head>
 <body>
+    <div id="top-bar">
+       <p>Time: <span id="time">60</span></p>
+    </div>
+    <div id= "start-area">
     <h1>Coding Quiz</h1>
     <p>
         Try to answer the code related questions within the time limit
     </p>
-    <button>
+    <button id = "start">
         Begin Quiz
     </button>
+    </div>
+    <div id="quiz-area">
+        <h1 id="questions"></h1>
+        <button id="button1"></button>
+        <button id="button2"></button>
+        <button id="button3"></button>
+        <button id="button4"></button>
+    </div>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
