added high scores

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <button type="button" class="col-sm btn btn-primary" id="button4"></button>
     </div>
     </div>
+
+    <div class ="container" id="high-scores">
+       <h1>High Scores</h1>
+        <ol id="score-list"></ol>
+    </div>
     <script src="./assets/script.js"></script>
 </body>
 </html>
